Change package scope to @ jcansdale

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@kalwalt/jsartoolkit-nft",
+  "name": "@jcansdale/jsartoolkit-nft",
   "version": "0.7.0",
   "main": "build/artoolkitNFT_wasm.js",
   "browser": "build/artoolkitNFT_wasm.js",
